# Paqueteria_Optimizacion_zamm079

./: LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst  mkdocs.yml
docs/docs/: index.md
source/: conf.py
src/Paqueteria_Optimizacion_byzamm079.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
