[project]
name = "Paqueteria_Optimizacion_byzamm079"
version = "0.0.3"
authors = [
  { name="zamm079", email="azi3lmtz@gmail.com" },
]
description = "Paqueteria de optimizacion multivariable y univariable"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/zamm079/Paqueteria_Optimizacion_zamm079"
Issues = "https://github.com/zamm079/Paqueteria_Optimizacion_zamm079/issues"